force-app/main/default/objects/Release_Version__c/Release_Version__c.object-meta.xml
<CustomObject>
    <description>This is the high level Release Version object which houses individual releases for product types below it.</description>
    <label>Release Version</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>