force-app/main/default/objects/Release_Version__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-11478: Set it to true if the Release Version should not be displayed on the Customer Portal</description>
    <inlineHelpText>Set it to true if the Release Version should not be displayed on the Customer Portal</inlineHelpText>
    <label>BlockedForDisplay</label>
    <type>Checkbox</type>
</CustomField>