force-app/main/default/objects/Release_Version__c/fields/End_Of_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Support_Date__c</fullName>
    <description>CS21-2097</description>
    <label>End of Support Date</label>
    <type>Date</type>
</CustomField>