force-app/main/default/objects/Release_Version__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to have the Release be visible.</description>
    <inlineHelpText>Check this to have the Release be visible.</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>