force-app/main/default/objects/Release_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Release_Date__c</columns>
    <columns>Version__c</columns>
    <columns>Visible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>